added a dev branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p> This is local repo file</p>
     <p> hello world</p>
+    <h1> Dev branch is created</h1>
 
     <script src="script.js"></script>
 </body>
